[tool.poetry]
name = "scrapeutilities"
version = "0.1.0"
description = "A collection of scraping utilities for web data extraction."
authors = ["Moritz Staudacher"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pyinstaller = "^6.11.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
